style: fix white spaces

--- a/src/theme/partials/_posts.css
+++ b/src/theme/partials/_posts.css
@@ -4,7 +4,7 @@
 @import './_buttons.css';
 
 .post-container {
-  padding: 8rem !important;
+  padding: 2rem !important;
   display: grid;
   border-radius: 6px;
   background: #00cdac;
